# dice-roller

./: .cz.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES.md  dice-roller.py  gitignore  pyproject.toml  requirements-dev.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  custom_issue.yml  feature_request.yml
.github/workflow/: bump_version.yml  changelog.yml  commitlint.yml  publish.yml  test.yml
tests/: test_dice_roller.py
