[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dice-roller"
version = "1.1"
description = "A flexible CLI dice rolling tool for tabletop games and simulations."
authors = [
    { name="mattyhakin" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Role-Playing",
]

[project.scripts]
dice-roller = "dice_roller:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1"
tag_format = "v$version"